# docs

./: .buildinfo  .gitignore  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
_static/: custom.css
about/: 01_current.html  02_people.html  03_cultural_heritage.html  03_gaps.html  04_future.html  04_products_and_product_ownership.html  05_projects.html  06_workflow.html  dpmt_process.html
config/: cantaloupe_config.html  dspace_entities.html  fedora_solr.html
crosswalking/: avalon-to-ark.html  avalon-to-pdf.html  creating-ark.html  marc-to-tamu-dc.html
other_services/: accessibility.html  audio_derivatives.html  generating_iiif_collections.html  generating_service_files.html  identifiers.html  iiif.html  kube.html  open_education_materials_and_ip.html  renaming_files_for_ts.html  using_super_computer_for_gpu_needs.html  whisper.html  writing_documentation.html
planning/: dspace-entities.html
policies/: captions_and_transcripts.html  metadata.html
statistics/: oaktrust.html
supercomputing/: using_super_computer_for_gpu_needs.html
troubleshooting/: open-oni.html
workflows/: accessibility.html  archipelago.html  avalon.html  dspace.html  dspace_importing.html  dspace_importing_entities.html  fedora.html  generating_iiif_collections.html  generating_service_files.html  identifiers.html  kube.html  kubectl.html  minting_a_doi.html  ojs.html  open-oni.html  rdfizing.html  running_detached_processes_in_docker.html  sage.html  sage_import.html  (+4 more)
(+492 files in other folders)
